create tests for dim tables

--- a/northwind_traders_DWH/dbt_project.yml
+++ b/northwind_traders_DWH/dbt_project.yml
@@ -38,7 +38,14 @@ models:
       +enabled: true
       +materialized: view
       +schema: stg_northwind
+      
     warehouse:
       +enabled: true
       +materialized: table
       +schema: stg_northwind
+
+    analytics_obt:
+      +enabled: true
+      +materialized: table
+      +schema: obt_northwind
+    
